gamesPredictions - display table. adding to each column vertical align for select issue

--- a/app/modules/components/gamesPredictions/gamesPredictions.less
+++ b/app/modules/components/gamesPredictions/gamesPredictions.less
@@ -1,40 +1,25 @@
 .gamesPredictions {
 
-	overflow: hidden;
+//	overflow: hidden;
 
-	&__row {
-		height: 50px;
-		line-height: 50px;
-		vertical-align: middle;
+  &__table {
+	display: table;
+	width: 100%;
+  }
 
-		display: flex;
-		justify-content: flex-start;
-		align-content: flex-start;
-		flex-wrap: nowrap;
+  &__row {
+	display: table-row;
+  }
 
-		text-align: center;
+  &__column {
+	display: table-cell;
+	padding: 10px 0;
+	vertical-align: middle;
 
-		&:not(:first-child):nth-child(even) {
-			background-color: antiquewhite;
-		}
-	}
+  }
 
-	&__column {
-		margin: 0 20px 0 0;
-		width: 250px;
-
-		white-space: nowrap;
-	}
-
-	&__header {
-		margin: 0 0 20px 0;
-		font-size: 15px;
-		font-weight: 600;
-		border-bottom: 1px solid #c80000;
-	}
-
-	&__select {
-		width: 100px;
-		margin: 0 auto;
-	}
+  	&__select {
+  		width: 100px;
+  		margin: 0 auto;
+  	}
 }
