--- a/app/modules/components/selectList/selectList.less
+++ b/app/modules/components/selectList/selectList.less
@@ -4,5 +4,8 @@ select-list {
 
 .selectList {
 	width: 100%;
-	height: 100%;
+	height: 28px;
+  	line-height: 20px;
+  	text-align: left;
+
 }
