--- a/app/modules/components/selectList/selectListFilter/selectListFilter.less
+++ b/app/modules/components/selectList/selectListFilter/selectListFilter.less
@@ -60,13 +60,10 @@ Version: 3.5.2 Timestamp: Sat Nov  1 14:43:36 EDT 2014
 
 	border: 1px solid transparent;
 	//white-space: nowrap;
-	//line-height: 26px; // removed
 	color: #c80000;
 	text-decoration: none;
 
-	border-radius: 4px;
-
-	background-clip: padding-box;
+//	border-radius: 4px;
 
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
@@ -74,15 +71,12 @@ Version: 3.5.2 Timestamp: Sat Nov  1 14:43:36 EDT 2014
 	-ms-user-select: none;
 	user-select: none;
 
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#ffffff', endColorstr = '#eeeeee', GradientType = 0);
-
 	// added:
 	font-size: inherit;
 	line-height: inherit;
 	background: none;
 	cursor: pointer;
 	height: 100%;
-	//width: 90px;
 }
 
 html[dir="rtl"] .selectListFilter-container .selectListFilter-choice {
@@ -90,15 +84,15 @@ html[dir="rtl"] .selectListFilter-container .selectListFilter-choice {
 }
 
 .selectListFilter-container.selectListFilter-drop-above .selectListFilter-choice {
-	border-bottom-color: #aaa;
-
-	border-radius: 0 0 4px 4px;
-
-	background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #eee), color-stop(0.9, #fff));
-	background-image: -webkit-linear-gradient(center bottom, #eee 0%, #fff 90%);
-	background-image: -moz-linear-gradient(center bottom, #eee 0%, #fff 90%);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#eeeeee', GradientType=0);
-	background-image: linear-gradient(to bottom, #eee 0%, #fff 90%);
+//	border-bottom-color: #aaa;
+//
+//	border-radius: 0 0 4px 4px;
+//
+//	background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #eee), color-stop(0.9, #fff));
+//	background-image: -webkit-linear-gradient(center bottom, #eee 0%, #fff 90%);
+//	background-image: -moz-linear-gradient(center bottom, #eee 0%, #fff 90%);
+//	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#eeeeee', GradientType=0);
+//	background-image: linear-gradient(to bottom, #eee 0%, #fff 90%);
 }
 
 .selectListFilter-container.selectListFilter-allowclear .selectListFilter-choice .selectListFilter-chosen {
